# PyCeWL

./: .gitignore  Dockerfile  MUTATIONS-HOWTO.md  Makefile  README.md  pycewl  pyproject.toml
src/pycewl/: __init__.py  cli.py  crawler.py  metadata.py  render.py  text.py
tests/: test_cli.py  test_crawler.py  test_metadata.py  test_render.py  test_text.py
