[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycewl"
version = "0.1.0"
description = "Python reimplementation of CeWL and FAB custom wordlist tooling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later OR CC-BY-SA-2.0-UK" }
authors = [
  { name = "CasualSecurityInc" },
]
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
render = [
  "playwright>=1.45",
]

[project.scripts]
pycewl = "pycewl.cli:main"
cewl = "pycewl.cli:cewl_main"
fab = "pycewl.cli:fab_main"

[dependency-groups]
dev = [
  "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pycewl"]

